--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ compiler:
   - clang
 sudo: required
 before_install:
-  - sudo apt-get install freeglut3-dev
+  - sudo apt-get install freeglut3-dev libglew-dev 
 # Change this to your needs
 script: ./configure 
